# otus-cpp-basic-ls007

./: .clang-format  .gitignore  CMakeLists.txt  README.md  otus-cpp-basic-ls006.code-workspace
.cache/clangd/index/: main.cpp.48622F386F6F87B7.idx
gtests/: CMakeLists.txt  tests.cpp
src/: main.cpp
